# unikey

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  key.layout.toml  keybabel.py  run.sh
src/: keyboard.rs  lib.rs  linux.rs  main.rs  parse.rs  tmpl.rs
src/utility/: mod.rs
src/utils/: mod.rs
templates/: base.lst.tmpl  evdev.lst.tmpl  layout.tmpl
templates/linux/: base.lst.tmpl  evdev.xml.tmpl
tests/utils/: tests.rs
