[package]
name = "unikey"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
toml = "0.5.8"
tera = "1.15.0"
failure = "0.1.8"

[lib]
name = "utils"
path = "src/utils/mod.rs"

# Unit Tests
[[bin]]
name = "tests-utils"
path = "tests/utils/tests.rs"
