[package]
name = "unikey"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
toml = "0.5.8"
tera = "1.15.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"

# Unit Tests
#[[bin]]
#name = "tests-utility"
#path = "tests/utility/tests.rs"
